src/app/blog/Blog.css
.BlogMain {
  height: 100%;
  width: 100%;
  overflow: auto;
  background-color: lightpink;
}

.BlogPageTitle {
  font-size: 32px;
  font-weight: bold;
  color: darkred;
  margin-bottom: 10px;
}

.BlogPageTitleDescription {
  font-size: 16px;
  color: gray;
  margin-bottom: 30px;
}

.BlogItems {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 20px;
}
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-thumb {
  background: violet;
  border-radius: 8px;
}
::-webkit-scrollbar-track {
  background: pink;
}

